# space_repetition

./: .gitignore  README.md  manage.py  pyproject.toml
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
dockers/: docker-compose.yml  export_db.sh
space_repetition/: asgi.py  settings.py  urls.py  wsgi.py
