[tool.poetry]
name = "space_repetition"
version = "0.1.0"
description = ""
authors = ["dev2 <c.chaiwat.ch@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
